--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Base configs
-baseurl: "https://github.com/Jordensan/photos"
+baseurl: "https://jordensan.github.io/photos/"
 #baseurl: "" # Comment the above line and uncomment this to test the website locally
 image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
